[package]
name = "oidc"
version = "0.1.0"
edition = "2021"

[dependencies]
openidconnect = { version = "2.3", default-features = false, features = [ "reqwest" ] }
anyhow = "1.0.68"
jsonwebtoken = "8.2.0"
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0"
biscuit = "0.5.0"

[[bin]]
path = "src/main.rs"
name = "main"

[[bin]]
path = "src/id_token.rs"
name = "id_token"
